k8s/ingress/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebooks-ingress
  namespace: ebooks-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3000

      - path: /catalog
        pathType: Prefix
        backend:
          service:
            name: catalog-service
            port:
              number: 3001

      - path: /ebooks
        pathType: Prefix
        backend:
          service:
            name: ebooks-service
            port:
              number: 3002

      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              number: 3003

      - path: /pay
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 3004
